fixes de findbugs